--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,38 @@
     </div>
     <main>
         <script src="nav.js"></script> 
+        <h1 id='proj'>Projects</h1>
+        <div class='project-container' id='research-proj'>
+            <h2>Language & Behavior for Large-Scale Breakthrough Lab</h2>
+            <div clas='description'>
+                <p>This semester I joined <a href="https://blablablab.si.umich.edu/">blablablab</a>, which is objectively the 
+                    reserach group with the coolest name at Michigan. I research how rhetorical frames impact engagement in Tweets about immigration
+                    and how the rhetorical frames in quote tweets and replies differ from the original tweet.
+                </p>
+                <p>
+                </br>My research is a spin-off of 
+                    <a href="https://arxiv.org/abs/2104.06443">this paper</a> authored by the PhD student I work with and her advisors. We're aiming to publish our work in the spring of 2022. 
+                </p>
+                </br><p>I've done someo of my best data visualization work on this project and can't wait to share it!</p>
+            </div>
+        </div>
+        <div class='project-container' id='tmd-proj'>
+            <div clas='description'>
+                <h2>The Michigan </h2>
+                <p>I joined The Michigan Daily on a whim freshman year and ended up managaging the paper's social media
+                    presence and newsletters from December 2020 to December 2021. Not really sure how that happened but I couldn't be happier. 
+                </p>
+                </br>
+                <p>To see my work in action follow us on <a href="https://twitter.com/michigandaily">Twitter</a> (or our <a href="https://twitter.com/theblockm">sports twitter</a> if that's more your vibe),
+                    <a href="https://www.facebook.com/michigandaily">Facebook</a>, <a href="https://www.instagram.com/michigandaily/?hl=en">Instagram</a> and <a href="https://michigandaily.us17.list-manage.com/subscribe?u=5b29cba54ca71a5a5894917bc&id=903d05ea29">subscribe to our newsletters!</a>
+                </p>
+            </div>
+            <img src='TMD/covid_rates.jpg'>
+            <img src='TMD/heritage_month.png'>
+            <img src='TMD/penn_state.jpg'>
+            <img src='TMD/regents.jpg'>
+            <img src='TMD/schlissel_package.jpg'>
+        </div>
     </main>
     <footer>
         
