--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
                 I'm eager to learn more about the intersection of product and data!
             </p>
             <h2 id='prev'>Previous Work</h2>
+            <p id='tagline'><i>click to learn more about my previous work</i></p>
             <div id='prev-links'>
                 <div class='prev-item' id='research'>
-                    <a href="/projects.html#research">Language & Behavior for Large Scale Break Through Lab</a>
+                    <a href="/projects.html#research">Language & Behavior for Large-Scale Breakthrough Lab</a>
                 </div>
                 <div class='prev-item' id='tmd'>
                     <a href="">The Michigan Daily</a>
