fixing TMD projects

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
           <i class="fa fa-bars"></i>
         </a>
     </div>
+    <header>
+      <nav>
+        <img src='stars.png' id='stars' class='header-links'></img>
+        <a class='header-links' href="">asfkha</a>
+        <a class='header-links' href="">asf</a>
+        <a class='header-links' href="">afsfask</a>
+    </nav>
+  </header>
     <main>
         <script src="nav.js"></script> 
         <div id='about'>
