--- a/projects.html
+++ b/projects.html
@@ -51,8 +51,8 @@
             </div>
         </div>
         <div class='project-container' id='tmd-proj'>
-            <div clas='description'>
-                <h2>The Michigan </h2>
+            <h2>The Michigan Daily</h2>
+            <div class='description'>
                 <p>I joined The Michigan Daily on a whim freshman year and ended up managaging the paper's social media
                     presence and newsletters from December 2020 to December 2021. Not really sure how that happened but I couldn't be happier. 
                 </p>
@@ -61,11 +61,12 @@
                     <a href="https://www.facebook.com/michigandaily">Facebook</a>, <a href="https://www.instagram.com/michigandaily/?hl=en">Instagram</a> and <a href="https://michigandaily.us17.list-manage.com/subscribe?u=5b29cba54ca71a5a5894917bc&id=903d05ea29">subscribe to our newsletters!</a>
                 </p>
             </div>
-            <img src='TMD/covid_rates.jpg'>
-            <img src='TMD/heritage_month.png'>
-            <img src='TMD/penn_state.jpg'>
-            <img src='TMD/regents.jpg'>
-            <img src='TMD/schlissel_package.jpg'>
+            <img id='tmd-one' src='TMD/covid_rates.jpg'>
+            <img id='tmd-two' src='TMD/heritage_month.png'>
+            <img id='tmd-three' src='TMD/penn_state.jpg'>
+            <img id='tmd-four' src='TMD/regents.jpg'>
+            <img id='tmd-five' src='TMD/schlissel_package.jpg'>
+            <img id='tmd-six' src='TMD/me_too.jpg'>
         </div>
     </main>
     <footer>
