adding content to projects page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <script src="nav.js"></script> 
         <div id='about'>
             <h1>Haley Johnson</h1>
-            <h2 id='tagline'><i>Data science & product @ meta</i></h2>
+            <h2 class='tagline'><i>Data science & product @ meta</i></h2>
             <img src="IMG_6056_lorg.jpg" alt="Haley" id="landing-img">
             <p class='blurb'>
                 I'm Haley Johnson, I'm a junior studying information science and statistics at the University of Michigan.  
@@ -57,7 +57,7 @@
                 I'm eager to learn more about the intersection of product and data!
             </p>
             <h2 id='prev'>Previous Work</h2>
-            <p id='tagline'><i>click to learn more about my previous work</i></p>
+            <p classs='tagline'><i>click to learn more about my previous work</i></p>
             <div id='prev-links'>
                 <div class='prev-item' id='research'>
                     <a href="/projects.html#research">Language & Behavior for Large-Scale Breakthrough Lab</a>
