--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,13 @@
                 </br>My research is a spin-off of 
                     <a href="https://arxiv.org/abs/2104.06443">this paper</a> authored by the PhD student I work with and her advisors. We're aiming to publish our work in the spring of 2022. 
                 </p>
-                </br><p>I've done someo of my best data visualization work on this project and can't wait to share it!</p>
+                </br>
+                <p>I've done some of my best data visualization work on this project and can't wait to share it!</p>
+                </br>
+                <p>
+                    <b>Skills Used:</b> Python, R, Regex, Seaborn, Pandas, data visualization & transformation, designing regression models, project scoping, liteature review
+                    </br>
+                </p>
             </div>
         </div>
         <div class='project-container' id='tmd-proj'>
@@ -60,6 +66,10 @@
                 <p>To see my work in action follow us on <a href="https://twitter.com/michigandaily">Twitter</a> (or our <a href="https://twitter.com/theblockm">sports twitter</a> if that's more your vibe),
                     <a href="https://www.facebook.com/michigandaily">Facebook</a>, <a href="https://www.instagram.com/michigandaily/?hl=en">Instagram</a> and <a href="https://michigandaily.us17.list-manage.com/subscribe?u=5b29cba54ca71a5a5894917bc&id=903d05ea29">subscribe to our newsletters!</a>
                 </p>
+                </br>
+                <p>
+                    <b>Skills Used:</b> Adobe Photoshop, Facebook Creator Studio, Hootsuite (content managment system for Twitter), social media managment, project scoping
+                </p>
             </div>
             <img id='tmd-one' src='TMD/covid_rates.jpg'>
             <img id='tmd-two' src='TMD/heritage_month.png'>
@@ -67,6 +77,46 @@
             <img id='tmd-four' src='TMD/regents.jpg'>
             <img id='tmd-five' src='TMD/schlissel_package.jpg'>
             <img id='tmd-six' src='TMD/me_too.jpg'>
+        </div>
+        <div class='project-container' id='bbd-proj'>
+            <h2>Bluebonnet Data Fellowship</h2>
+            <div class='description'>
+                <p>During winter 2021 I was a volunteer data scientists with <a href="https://www.bluebonnetdata.org/">Bluebonnet Data</a>, an 
+                    organization that pairs people with technical skills with progressive campaigns and organizations. 
+                </p>
+                </br>
+                <p>I worked with <a href="https://www.newruralproject.org/">New Rural Project</a> to understand demographic trends
+                    and voter behavior in North Carolina's 9th Congressional District.
+                </p>
+                </br> 
+                <p>
+                    <b>Skills Used:</b> Python, Microsoft Excel, Tableau, data cleaning & transformation, collaborating on technical projects, 
+                    working with non-technical clients 
+                </p>   
+            </div>
+            <img src='bbd/hoke_viz.png'>
+            <p class='tagline'><i>Changes in Party Registration by Race in Hoke County, North Carolina</i></p>
+            <img src='bbd/moore_viz.png'>
+            <p class='tagline'><i>Changes in Party Registration by Race in Moore County, North Carolina</i></p>
+        </div>
+        <div class='project-container' id='twitter-proj'>
+            <h2>Twitter Heuristic Analysis</h2>
+            <div class='description'>
+                <p>Fall 2020 I took SI 110 "Introduction to Information Studies." As a class project I completed
+                    a heuristic analysis of Twitter using 
+                    <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">Nielsen's 10 Usability Heuristics</a>. 
+                </p>
+                </br>
+                <p>
+                    I didn't know a ton about UX before taking this class, so this project was a great way to dive into usability
+                    and learn more about what it looks like in practice. 
+                </p>
+                </br>
+                <p>
+                    <b>Skills Used: </b> Adobe Photoshop, heuristic analysis, user research, product research
+                </p>
+            </div>
+            <iframe src="twitter/heuristic_analysis.pdf" title="Twitter Heuristic Analysis" id='twitter-iframe'></iframe>
         </div>
     </main>
     <footer>
