--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <a class = "skip" href="#about">Skip to Main Content</a>
     <!-- mobile nav -->
     <div class="topnav">
-        <a href="#home" class="active">
+        <a href="index.html" class="active">
             <img src="stars.png" id='stars'> 
         </a>
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks">
-          <a href="#news">News</a>
-          <a href="#contact">Contact</a>
+          <a href="projects.html">Projects</a>
+          <a href="contact.html">Contact</a>
           <a href="#about">About</a>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
@@ -57,21 +57,23 @@
                 I'm eager to learn more about the intersection of product and data!
             </p>
             <h2 id='prev'>Previous Work</h2>
-            <p classs='tagline'><i>click to learn more about my previous work</i></p>
+            <p class='tagline'><i>click to learn more about my previous work</i></p>
             <div id='prev-links'>
                 <div class='prev-item' id='research'>
-                    <a href="/projects.html#research">Language & Behavior for Large-Scale Breakthrough Lab</a>
+                    <a href="/projects.html#research-">Language & Behavior for Large-Scale Breakthrough Lab</a>
+                </div>
+                <div class='prev-item' id='covid'>
+                    <a href="/projects.html#covid-proj">COVID-19 Spread, Unemployment and Mobility Patterns</a>
                 </div>
                 <div class='prev-item' id='tmd'>
-                    <a href="">The Michigan Daily</a>
+                    <a href="/projects.html#tmd-proj">The Michigan Daily</a>
                 </div>
                 <div class='prev-item' id='bbd'>
-                    <a href="">Bluebonnet Data Fellowship</a>
+                    <a href="projects.html/#bbd-proj">Bluebonnet Data Fellowship</a>
                 </div>
                 <div class='prev-item' id='twitter'>
-                    <a href="">Twitter Heuristic Analysis</a>
+                    <a href="/projects.html#twitter-proj">Twitter Heuristic Analysis</a>
                 </div>
-
             </div>
         </div>
     </main>
