--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
     <header>
         <nav>
           <img src='stars.png' id='stars' class='header-links'></img>
-          <a class='header-links' href="">asfkha</a>
-          <a class='header-links' href="">asf</a>
-          <a class='header-links' href="">afsfask</a>
+          <a class='header-links' href="index.html">home</a>
+          <a class='header-links' href="projects.html">projects</a>
+          <a class='header-links' href="contact.html">contact</a>
       </nav>
     </header>
   <main>
