--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
     <header>
       <nav>
         <img src='stars.png' id='stars' class='header-links'></img>
-        <a class='header-links' href="">asfkha</a>
-        <a class='header-links' href="">asf</a>
-        <a class='header-links' href="">afsfask</a>
+        <a class='header-links' href="index.html">home</a>
+        <a class='header-links' href="projects.html">projects</a>
+        <a class='header-links' href="contact.html">contact</a>
     </nav>
   </header>
     <main>
         <script src="nav.js"></script> 
         <div id='about'>
-            <h1>Haley Johnson</h1>
-            <h2 class='tagline'><i>Data science & product @ meta</i></h2>
+            <h1 class='landing-title'>Haley Johnson</h1>
+            <h2 class='tagline landing-tagline'><i>Data science & product @ meta</i></h2>
             <img src="IMG_6056_lorg.jpg" alt="Haley" id="landing-img">
-            <p class='blurb'>
+            <p class='blurb' id='landing-blurb'>
                 I'm Haley Johnson, I'm a junior studying information science and statistics at the University of Michigan.  
                 I love digital culture, emerging technologies, and using quantitative methods to understand
                 political and interpersonal behavor.
-            </p>
-            <p id='blurb'>
+            </br>
+            </br>
                 Next summer I will be joining Meta as a product analyst in their Menlo Park office. 
                 I'm eager to learn more about the intersection of product and data!
             </p>
-            <h2 id='prev'>Previous Work</h2>
-            <p class='tagline'><i>click to learn more about my previous work</i></p>
+            <h2 id='prev' class='landing-title'>Previous Work</h2>
+            <p class='tagline landing-tagline'><i>click to learn more about my previous work</i></p>
             <div id='prev-links'>
                 <div class='prev-item' id='research'>
                     <a href="/projects.html#research-">Language & Behavior for Large-Scale Breakthrough Lab</a>
