--- a/projects.html
+++ b/projects.html
@@ -35,10 +35,10 @@
     </div>
     <header>
         <nav>
-          <img src='stars.png' id='stars' class='header-links'></img>
-          <a class='header-links' href="">asfkha</a>
-          <a class='header-links' href="">asf</a>
-          <a class='header-links' href="">afsfask</a>
+            <img src='stars.png' id='stars' class='header-links'></img>
+            <a class='header-links' href="index.html">home</a>
+            <a class='header-links' href="projects.html">projects</a>
+            <a class='header-links' href="contact.html">contact</a>
       </nav>
     </header>
     <main>
@@ -78,6 +78,14 @@
                     In my group, I was responsible for collecting data from the 
                     <a href="https://www.bts.gov/browse-statistical-products-and-data/covid-related/changes-mobility-state-0">Bureau of Transportation Statistic's API.</a>
                     I also built the database that contained all of the data we had collected.  
+                </p>
+                </br>
+                <p>
+                    She full project repo <a href="https://github.com/haleyej/SI206Project">here.</a>
+                </p>
+                </br>
+                <p>
+                    <b>Skills Used: </b>Python, SQLite, REST APIs, data visualization, database design and normalization
                 </p>
             </div>
             <img class='covid-span' src='covid_data/viz1.png'>
