--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,8 @@
         </div>
 
         <div class='form-box' id='additional-contact'>
-          <p>In addition, you can find me on <a href ="https://github.com/haleyej">Github</a>,
+          <p>Feel free to reach out with oppurtunities,  questions, or anything else!</br></br>
+             In addition, you can find me on <a href ="https://github.com/haleyej">Github</a>,
             <a href="https://twitter.com/halezjohnson">Twitter</a> and 
             <a href="https://www.linkedin.com/in/haley-johnson-b0345a187/">Linkedin</a>.
           </p>
