--- a/projects.html
+++ b/projects.html
@@ -92,9 +92,8 @@
             <img src='covid_data/viz2_cropped.png'>
             <img src='covid_data/viz3_cropped.png'>
             <p class='tagline covid-span'>visualizations from the project</p>
-            <img src='covid_data/db.png'>
-            <img src='covid_data/db.png'>
-            <p class='tagline covid-span'>database & database schema</p>
+            <img class='covid-span' src='covid_data/db.png'>
+            <p class='tagline covid-span'>database</p>
         </div>
         <div class='project-container' id='tmd-proj'>
             <h2>The Michigan Daily</h2>
