--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <header>
       <nav>
-        <img src='stars.png' id='stars' class='header-links'></img>
+        <img src='stars.png' id='stars'></img>
         <a class='header-links' href="index.html">home</a>
         <a class='header-links' href="projects.html">projects</a>
         <a class='header-links' href="contact.html">contact</a>
@@ -51,6 +51,10 @@
                 I'm Haley Johnson, I'm a junior studying information science and statistics at the University of Michigan.  
                 I love digital culture, emerging technologies, and using quantitative methods to understand
                 political and interpersonal behavor.
+            </br>
+            </br>
+                Outside of class you can find me working on my research through UMSI, teaching an intro programming course, 
+                or running social media for my student newspaper, The Michigan Daily. 
             </br>
             </br>
                 Next summer I will be joining Meta as a product analyst in their Menlo Park office. 
