--- a/contact.html
+++ b/contact.html
@@ -25,23 +25,25 @@
         </a>
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks">
-          <a href="projects.html">Projects</a>
-          <a href="contact.html">Contact</a>
-          <a href="#about">About</a>
-        </div>
-        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
-    </div>
-    <header>
-        <nav>
-          <img src='stars.png' id='stars' class='header-links'></img>
-          <a class='header-links' href="index.html">home</a>
-          <a class='header-links' href="projects.html">projects</a>
-          <a class='header-links' href="contact.html">contact</a>
-      </nav>
-    </header>
+            <a href="index.html">home</a>
+            <a href="projects.html">projects</a>
+            <a class='header-links' href="resume.pdf">resume</a>
+            <a href="contact.html">contact</a>
+          </div>
+          <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
+      </div>
+      <header>
+          <nav>
+              <img src='stars.png' id='stars' class='header-links'></img>
+              <a class='header-links' href="index.html">home</a>
+              <a class='header-links' href="projects.html">projects</a>
+              <a class='header-links' href="resume.pdf">resume</a>
+              <a class='header-links' href="contact.html">contact</a>
+        </nav>
+      </header>
   <main>
     <script src="nav.js"></script> 
     <div class='contact-container'>
