fixed skip to content and projects links

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p class='tagline landing-tagline'><i>click to learn more about my previous work</i></p>
             <div id='prev-links'>
                 <div class='prev-item' id='research'>
-                    <a href="/projects.html#research-">Language & Behavior for Large-Scale Breakthrough Lab</a>
+                    <a href="/projects.html#research-proj">Language & Behavior for Large-Scale Breakthrough Lab</a>
                 </div>
                 <div class='prev-item' id='covid'>
                     <a href="/projects.html#covid-proj">COVID-19 Spread, Unemployment and Mobility Patterns</a>
@@ -76,7 +76,7 @@
                     <a href="/projects.html#tmd-proj">The Michigan Daily</a>
                 </div>
                 <div class='prev-item' id='bbd'>
-                    <a href="projects.html/#bbd-proj">Bluebonnet Data Fellowship</a>
+                    <a href="/projects.html#bbd-proj">Bluebonnet Data Fellowship</a>
                 </div>
                 <div class='prev-item' id='twitter'>
                     <a href="/projects.html#twitter-proj">Twitter Heuristic Analysis</a>
