--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     <title>Haley Johnson</title>
 </head>
 <body>
-    <a class = "skip" href="#about">Skip to Main Content</a>
+    <a class = "skip" href="#research-proj">Skip to Main Content</a>
     <!-- mobile nav -->
     <div class="topnav">
         <a href="index.html" class="active">
