updates and link errors

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class='form-box' id='additional-contact'>
-          <p>Feel free to reach out with oppurtunities,  questions, or anything else!</br></br>
+          <p>Feel free to reach out with opportunities,  questions, or anything else!</br></br>
              In addition, you can find me on <a href ="https://github.com/haleyej">Github</a>,
             <a href="https://twitter.com/halezjohnson">Twitter</a> and 
             <a href="https://www.linkedin.com/in/haley-johnson-b0345a187/">Linkedin</a>.
