--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </br>
             </br>
                 Outside of class you can find me working on my research through UMSI, teaching an intro programming course, 
-                or running social media for my student newspaper, The Michigan Daily. 
+                or writing my column about digital culture and campus life for my student newspaper, The Michigan Daily.  
             </br>
             </br>
                 Next summer I will be joining Meta as a product analyst in their Menlo Park office. 
