--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,12 @@
                     presence and newsletters from December 2020 to December 2021. Not really sure how that happened but I couldn't be happier. 
                 </p>
                 </br>
-                <p>To see my work in action follow us on <a href="https://twitter.com/michigandaily">Twitter</a> (or our <a href="https://twitter.com/theblockm">sports twitter</a> if that's more your vibe),
+                <p>Now that my term managing social is up I'll be joining The Statement, The Daily's magazine that blendns
+                    journalism, opinion, and creative nonfiction, as a columnist. I can't wait to share my work and develop 
+                    my skills as a writer.
+                </p>
+                </br>
+                <p>To check out The Daily, follow us on <a href="https://twitter.com/michigandaily">Twitter</a> (or our <a href="https://twitter.com/theblockm">sports twitter</a> if that's more your vibe),
                     <a href="https://www.facebook.com/michigandaily">Facebook</a>, <a href="https://www.instagram.com/michigandaily/?hl=en">Instagram</a> and <a href="https://michigandaily.us17.list-manage.com/subscribe?u=5b29cba54ca71a5a5894917bc&id=903d05ea29">subscribe to our newsletters!</a>
                 </p>
                 </br>
